--- a/form/src/main/res/layout/form_item_divider.xml
+++ b/form/src/main/res/layout/form_item_divider.xml
@@ -3,4 +3,4 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/form_divider"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="wrap_content" />
