--- a/form/src/main/res/layout/form_item_button.xml
+++ b/form/src/main/res/layout/form_item_button.xml
@@ -8,8 +8,8 @@
         android:id="@+id/form_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/contentMedium"
-        android:layout_marginEnd="@dimen/contentMedium"
+        android:layout_marginStart="@dimen/formItemHorizontal"
+        android:layout_marginEnd="@dimen/formItemHorizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
