--- a/form/src/main/res/layout/form_item_group_name_default.xml
+++ b/form/src/main/res/layout/form_item_group_name_default.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="@dimen/contentSmall">
+    android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/form_iv_icon"
         android:layout_width="@dimen/d36"
         android:layout_height="@dimen/d36"
+        android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/d12"
         android:layout_marginTop="@dimen/d4"
         android:layout_marginBottom="@dimen/d4"
-        android:padding="@dimen/d4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:padding="@dimen/d4" />
 
     <TextView
         android:id="@+id/form_tv_name"
@@ -24,24 +21,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/contentSmall"
         android:layout_marginBottom="@dimen/contentSmall"
-        android:textAppearance="?textAppearanceTitleLarge"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
-        app:layout_constraintStart_toEndOf="@id/form_iv_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_goneMarginStart="@dimen/formContentMedium"
+        android:layout_weight="1"
+        android:textAppearance="?textAppearanceTitleMedium"
         tools:text="测试内容" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/form_iv_menu"
-        android:layout_width="@dimen/d36"
-        android:layout_height="@dimen/d36"
-        android:layout_gravity="center_vertical"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="?actionBarItemBackground"
-        android:padding="@dimen/contentSmall"
+        android:paddingStart="@dimen/formItemIconPadding"
+        android:paddingEnd="@dimen/formItemHorizontal"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@android:drawable/ic_lock_idle_alarm" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
