--- a/form/src/main/res/layout/form_item_text.xml
+++ b/form/src/main/res/layout/form_item_text.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/form_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -9,29 +10,30 @@
         android:id="@+id/form_tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingVertical="@dimen/formItemVertical"
-        android:paddingStart="@dimen/formItemHorizontal"
+        android:layout_marginStart="@dimen/formItemHorizontal"
+        android:paddingTop="@dimen/formItemVertical"
+        android:paddingBottom="@dimen/formItemVertical"
         android:textAppearance="?textAppearanceBodyMedium"
         android:textColor="?colorSecondary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ems="6"
+        tools:ems="4"
         tools:text="测试名称" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/form_tv_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:paddingHorizontal="@dimen/formItemContentHorizontal"
-        android:paddingVertical="@dimen/formItemVertical"
+        android:paddingStart="@dimen/formItemHorizontalContent"
+        android:paddingTop="@dimen/formItemVertical"
+        android:paddingEnd="@dimen/formItemHorizontalContent"
+        android:paddingBottom="@dimen/formItemVertical"
         android:textAppearance="?textAppearanceBodyMedium"
         android:textColor="@color/form_text"
         android:textIsSelectable="true"
         app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_goneMarginEnd="@dimen/formItemHorizontal"
         tools:text="内容" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -39,14 +41,13 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginEnd="@dimen/formItemHorizontalIgnoreIcon"
-        android:background="?actionBarItemBackground"
-        android:paddingHorizontal="@dimen/formItemIconPadding"
+        android:background="@drawable/form_ripple_menu_selected_background"
+        android:paddingStart="@dimen/formItemMenuIconPadding"
+        android:paddingEnd="@dimen/formItemMenuIconPadding"
         android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/form_tv_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_max="@dimen/formItemIconSize"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/form_tv_name"
         tools:src="@android:drawable/ic_lock_idle_alarm" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
