--- a/form/src/main/res/layout/form_item_address.xml
+++ b/form/src/main/res/layout/form_item_address.xml
@@ -28,13 +28,14 @@
         android:gravity="center_vertical"
         android:minHeight="0dp"
         android:paddingStart="@dimen/formItemHorizontalContent"
-        android:paddingEnd="@dimen/formItemHorizontalContent"
+        android:paddingEnd="@dimen/d4"
         android:textAppearance="?textAppearanceBodyMedium"
         android:textColor="?colorOnSurface"
-        app:icon="@drawable/ic_menu_end_right"
+        app:icon="@drawable/form_ic_more"
         app:iconGravity="end"
+        app:iconPadding="@dimen/formItemMenuIconPadding"
+        app:iconTint="?colorOnSurface"
         app:iconSize="@dimen/formItemMenuIconSize"
-        app:iconTint="?colorOutline"
         app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent"
@@ -64,7 +65,7 @@
         app:boxBackgroundMode="none"
         app:endIconCheckable="true"
         app:endIconDrawable="@drawable/form_ic_edit_clear"
-        app:endIconMinSize="@dimen/formItemInputEndIconMinSize"
+        app:endIconMinSize="@dimen/formItemMenuIconSize"
         app:endIconMode="clear_text"
         app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
